# tableau-migration-sdk

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  Directory.Build.props  LICENSE.txt  Migration SDK.sln  README.md
.config/: dotnet-tools.json
.github/: .secrets.default  .vars.default  dependabot.yml  pull_request_template.md  release.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build-docs.yml  build-dotnet.yml  build-python-package.yml  create-release.yml  deploy-all.yml  deploy-docs.yml  deploy-dotnet.yml  deploy-python.yml  dotnet-build.yml  dotnet-package.yml  dotnet-test.yml  lint-python.yml  publishdocs-dryrun.yml  publishdocs.yml  python-example-test.yml  python-package.yml  python-test.yml  sdk-workflow.yml  test-dotnet.yml  test-python.yml
examples/Csharp.ExampleApplication/: Csharp.ExampleApplication.csproj  MyMigrationApplication.cs  Program.cs  README.md  appsettings.json  packages.lock.json
examples/DependencyInjection.ExampleApplication/: Assert.cs  DependencyInjection.ExampleApplication.csproj  Extensions.cs  Program.cs  SingletonService.cs  packages.lock.json
examples/Python.ExampleApplication/: Python.ExampleApplication.py  Python.ExampleApplication.pyproj  config.ini  hooks.py  hooks_callback.py  hooks_factory.py  print_result.py  pyproject.toml  requirements.txt
scripts/: Clean-Server.dib  generate-docs.ps1  generate-license-header-python.ps1
src/Documentation/: .gitignore  Documentation.csproj  README.md  cspell.json  docfx.json  filterConfig.yml  index.md  toc.yml
src/Python/: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Python.pyproj  README.md  pyproject.toml  pytest.ini  requirements.txt
src/Python/Documentation/: Makefile  conf.py  index.rst  make.bat
src/Python/Documentation/_templates/: custom-class-template.rst  custom-module-template.rst
src/Python/scripts/: build-package.ps1  build_binaries.py  build_tests.py  import_modules.py  publish-package.ps1
src/Python/src/tableau_migration/: __init__.py  migration.py  migration_api_rest.py  migration_api_rest_models.py  migration_api_rest_models_types.py  migration_content.py  migration_content_permissions.py  migration_content_schedules.py  migration_content_schedules_cloud.py  migration_content_schedules_server.py  migration_content_search.py  migration_engine.py  migration_engine_actions.py  migration_engine_endpoints_caching.py  migration_engine_endpoints_search.py  migration_engine_hooks.py  migration_engine_hooks_builder.py  migration_engine_hooks_filters.py  migration_engine_hooks_filters_builder.py  migration_engine_hooks_filters_interop.py  migration_engine_hooks_initializemigration.py  migration_engine_hooks_interop.py  migration_engine_hooks_mappings.py  migration_engine_hooks_mappings_builder.py  migration_engine_hooks_mappings_interop.py  migration_engine_hooks_postpublish.py  migration_engine_hooks_postpublish_interop.py  migration_engine_hooks_pulled.py  migration_engine_hooks_pulled_interop.py  migration_engine_hooks_results.py  migration_engine_hooks_transformers.py  migration_engine_hooks_transformers_builder.py  migration_engine_hooks_transformers_interop.py  migration_engine_manifest.py  migration_engine_migrators.py  migration_engine_migrators_batch.py  migration_engine_options.py  migration_engine_pipelines.py  migration_engine_services.py  migration_enum.py  (+4 more)
src/Python/tests/: __init__.py  conftest.py  test_classes.py  test_migration.py  test_migration_api_rest.py  test_migration_api_rest_models.py  test_migration_content.py  test_migration_content_permissions.py  test_migration_content_schedules.py  test_migration_content_schedules_cloud.py  test_migration_content_schedules_server.py  test_migration_content_search.py  test_migration_engine.py  test_migration_engine_endpoints_search.py  test_migration_engine_hooks.py  test_migration_engine_hooks_builder.py  test_migration_engine_hooks_filters.py  test_migration_engine_hooks_filters_builder.py  test_migration_engine_hooks_mappings.py  test_migration_engine_hooks_mappings_builder.py  test_migration_engine_hooks_postpublish.py  test_migration_engine_hooks_pulled.py  test_migration_engine_hooks_transformers.py  test_migration_engine_hooks_transformers_builder.py  test_migration_engine_manifest.py  test_migration_engine_migrators_batch.py  test_migration_engine_options.py  test_migration_engine_pipelines.py  test_migration_engine_services.py  test_migration_paging.py  test_migration_services.py  test_migrations_engine_hooks.py  test_migrations_engine_hooks_filters.py  test_migrations_engine_hooks_filters_lifetime.py  test_migrations_engine_hooks_lifetime.py  test_migrations_engine_hooks_mappings.py  test_migrations_engine_hooks_mappings_lifetime.py  test_migrations_engine_hooks_transformers.py  test_migrations_engine_hooks_transformers_lifetime.py  test_migrations_engine_options.py  (+1 more)
src/Python/tests/helpers/: autofixture.py
src/Tableau.Migration.PythonGenerator/: ConversionMode.cs  GenerationListHelper.cs  INamedTypeSymbolExtensions.cs  ITypeSymbolExtensions.cs  IndentingStringBuilder.cs  Program.cs  PythonArgDocstring.cs  PythonDocstring.cs  PythonEnumValue.cs  PythonGenerationList.cs  PythonGeneratorService.cs  (+12 more)
tests/Python.ExampleApplication.Tests/: Python.ExampleApplication.Tests.pyproj  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/Python.ExampleApplication.Tests/tests/: __init__.py  test_default_project_filter.py  test_log_migration_batches_hook.py
tests/Python.ExampleApplication.Tests/tests/helpers/: autofixture.py
tests/Python.TestApplication/: Python.TestApplication.pyproj  README.md  build.py  config.ini  config.json  helper.py  main.py  migration_testcomponents_engine_manifest.py  migration_testcomponents_filters.py  migration_testcomponents_hooks.py  migration_testcomponents_mappings.py  migration_testcomponents_transformers.py  print_result.py  pyproject.toml  pytest.ini  requirements.txt  test_tableau_cloud_username_mapping.py
tests/Python.TestApplication/testapplication_tests/: __init__.py  test_classes.py
(+2328 files in other folders)
