[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableau_migration"
dynamic = ["version"]

authors = [
  { name="Salesforce, Inc." },
]
description = "Tableau Migration SDK"
readme = "README.md"
# https://devguide.python.org/versions/
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

dependencies = [
    "typing_extensions==4.14.1",
    "cffi==1.17.1",
    "pycparser==2.22",
    "pythonnet==3.0.5"
]

# Get the version from Directory.Build.props file, which is where the nuget package version comes from.
[tool.hatch.version]
path = "../../Directory.Build.props"
pattern = "(?<=<Version>)(?P<version>[^<]*)"
scheme = "standard"
validate-bump = false

[tool.hatch.envs.docs]
dependencies = [
  "sphinx-markdown-builder==0.6.7"
]

[tool.hatch.envs.docs.scripts]
docs = "sphinx-build -M markdown .\\Documentation\\ ..\\Documentation\\python\\ -Q"

[tool.hatch.envs.lint]
detached = true

dependencies = [
  "ruff==0.12.4"
]

[tool.hatch.envs.lint.scripts]
lint = "ruff check ." 

[tool.hatch.envs.test]
dev-mode = false
dependencies = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-env>=1.1.5"
]

[tool.hatch.envs.test.scripts]
test = "pytest -vv"
testcov = "test --cov-config=pyproject.toml --cov=src/tableau_migration --cov-report term --cov-report xml:TestResults/coverage-{matrix:python}.xml"

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[project.urls]
"Homepage" = "http://www.tableau.com"
"Bug Tracker" = "http://www.tableau.com"
"Repository" = "https://github.com/tableau/tableau-migration-sdk"

[tool.hatch.build]
artifacts = [
  "src/tableau_migration/bin"
]

exclude = [
    "scripts",
    "CONTRIBUTING.md",
    "DOCUMENTATION.md",
    "Documentation",
    "tests",
    "pytest.ini",
    "Python.pyproj"
]

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# TODO: Look into turning "ANN" on once we understand why type hinting does't work for dotnet types
select = ["D", "E", "F", "N"]
ignore = ["D401", "D407", "E501"]

exclude = [
  "tests"
]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.pyright]
reportMissingImports = false