[project]
name = "tableau_migration_example_app_tests"
dynamic = ["version"]

authors = [
  { name="Salesforce, Inc." },
]
description = "Tableau Migration SDK - Example Application Tests"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pytest>=8.3.3",
    "pythonnet==3.0.5",
    "typing_extensions==4.12.2"
]

[tool.hatch.build]
exclude = [
    "obj",
    "TestResults",
    "pytest.ini",
    "Python.pyproj"
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.hatch.envs.test]
dev-mode = false
dependencies = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "pytest-env>=1.1.5",
  "pythonnet==3.0.5",
  "typing_extensions==4.12.2"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint.scripts]
lint = "ruff check ." 

[tool.hatch.envs.test.scripts]
test = "pytest -vv"
testcov = "test --cov-config=pyproject.toml --cov=../../../examples/Python.ExampleApplication/Hooks --cov-report term --cov-report xml:TestResults/coverage-{matrix:python}.xml"


