[project]
name = "tableau_migration_example_app_tests"
dynamic = ["version"]

authors = [
  { name="Salesforce, Inc." },
]
description = "Tableau Migration SDK - Example Application Tests"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pytest>=9.0.1",
    "pythonnet==3.0.5",
    "typing_extensions==4.15.0"
]

[tool.hatch.build]
exclude = [
    "obj",
    "TestResults",
    "pytest.ini",
    "Python.pyproj"
]
packages = ["tests"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.hatch.envs.test]
dev-mode = false
dependencies = [
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "pythonnet==3.0.5",
  "typing_extensions==4.15.0"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true

dependencies = [
  "ruff==0.14.8"
]

[tool.hatch.envs.lint.scripts]
lint = "ruff check ." 

[tool.hatch.envs.test.scripts]
test = "pytest -vv"
testcov = "test --cov-config=pyproject.toml --cov=../../examples/Python.ExampleApplication/hooks/ --cov-report term --cov-report xml:TestResults/coverage-{matrix:python}.xml"


